frontend: main menu z-index fix

--- a/frontend/src/app/menu/menu.component.css
+++ b/frontend/src/app/menu/menu.component.css
@@ -5,6 +5,7 @@
   top: 0;
   width: 100%;
   text-align: center;
+  z-index: 1;
 }
 .navbar a {
   display: inline-block;
